--- a/ems/configmap/configmap.yaml
+++ b/ems/configmap/configmap.yaml
@@ -17,7 +17,7 @@ data:
             max-file-size: 10MB
             max-request-size: 10MB
       config:
-        location: /mnt/data/
+        location: /mnt
       hcl:
         ald:
           employeeCount: 179
