BEYINF-15 added textSeparator value in config map updated tag

--- a/ems/configmap/configmap.yaml
+++ b/ems/configmap/configmap.yaml
@@ -23,6 +23,7 @@ data:
           employeeCount: 179
           employeeStartIndex: 2
           monthYearSeparator: '-'
+          textSeparator: '#~#'
           outputFile: 'Salary Records.xlsx'
           fontStyle: 'Calibri'
     server:
