BEYINF-18 added property to config map

--- a/ems/configmap/configmap.yaml
+++ b/ems/configmap/configmap.yaml
@@ -21,6 +21,7 @@ data:
       hcl:
         ald:
           employeeCount: 179
+          monthsCount: 255
           employeeStartIndex: 2
           monthYearSeparator: '-'
           textSeparator: '#~#'
